--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "name": "wayback-cdx-extractor",
-  "version": "1.0.0",
-  "description": "Extract last snapshots metadata (title, meta, canonical, OG...) from Wayback CDX",
+  "version": "1.1.0",
+  "description": "Extract last snapshots metadata (title, meta, canonical, OG...) from Wayback CDX with modern web interface",
   "type": "module",
   "license": "MIT",
+  "author": "El Gnani Mohamed",
   "scripts": {
     "start": "node wayback-last.mjs linkuma.com",
     "last5": "node wayback-last.mjs linkuma.com --n 5",
-    "last5-unique": "node wayback-last.mjs linkuma.com --n 5 --unique"
+    "last5-unique": "node wayback-last.mjs linkuma.com --n 5 --unique",
+    "server": "node server.js",
+    "dev": "node server.js"
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.12",
+    "express": "^4.18.2",
     "node-fetch": "^3.3.2"
   }
 }
